force-app/main/default/objects/Encuestas_CX__c/fields/Satisfacci_n_Profesionales__c.field-meta.xml
<CustomField>
    <fullName>Satisfacci_n_Profesionales__c</fullName>
    <description>Este campo refiere a la valoración del paciente en cuanto al servicio brindado por los profesionales</description>
    <inlineHelpText>Pregunta: ¿Cómo valoraría el servicio prestado por nuestros profesionales?</inlineHelpText>
    <label>Satisfacción Profesionales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>