force-app/main/default/objects/Encuestas_CX__c/fields/Servicio_de_otra_empresa_similar_a_BC__c.field-meta.xml
<CustomField>
    <fullName>Servicio_de_otra_empresa_similar_a_BC__c</fullName>
    <description>¿Recibió el servicio de alguna empresa que brindaba el mismo que Best Care?</description>
    <inlineHelpText>¿Recibió el servicio de alguna empresa que brindaba el mismo que Best Care?</inlineHelpText>
    <label>Servicio de otra empresa similar a BC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>