force-app/main/default/objects/Encuestas_CX__c/fields/Si_7_6_por_qu_por_qu_no_recom__c.field-meta.xml
<CustomField>
    <fullName>Si_7_6_por_qu_por_qu_no_recom__c</fullName>
    <inlineHelpText>Si tu puntuación fue mayor a 7, ¿por qué nos recomendarías? Y si fue 6 o menos, ¿por qué no?</inlineHelpText>
    <label>Si &gt; 7/ &lt;=6, por qué/por qué no recom?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>