force-app/main/default/objects/Encuestas_CX__c/fields/Si_9_en_alguna_de_las_2_anteriores__c.field-meta.xml
<CustomField>
    <fullName>Si_9_en_alguna_de_las_2_anteriores__c</fullName>
    <description>En caso de haber otorgado puntaje menor a 9 en cualquiera de las dos preguntas anteriores, ¿Cuál era su expectativa?</description>
    <label>Si&lt;9 en alguna de 2 anteriores, por qué?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>