force-app/main/default/objects/Encuestas_CX__c/fields/Si_seleccion_Otras_cu_l_ser_a__c.field-meta.xml
<CustomField>
    <fullName>Si_seleccion_Otras_cu_l_ser_a__c</fullName>
    <inlineHelpText>Si seleccionó &quot;Otras&quot;,  ¿cuál sería?</inlineHelpText>
    <label>Si seleccionó &quot;Otras&quot;,  ¿cuál sería?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>