force-app/main/default/objects/Encuestas_CX__c/fields/TEL__c.field-meta.xml
<CustomField>
    <fullName>TEL__c</fullName>
    <label>TEL</label>
    <type>Phone</type>
</CustomField>