force-app/main/default/objects/Encuestas_CX__c/fields/Telemedicina__c.field-meta.xml
<CustomField>
    <fullName>Telemedicina__c</fullName>
    <inlineHelpText>¿Consideraría continuar con visitas virtuales cuando finalice la contingencia en contexto COVID?</inlineHelpText>
    <label>Telemedicina</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No sabe</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>