force-app/main/default/objects/Encuestas_CX__c/fields/Valoraci_n_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Valoraci_n_de_Servicio__c</fullName>
    <inlineHelpText>Por favor, indique si le resulta valioso el servicio brindado</inlineHelpText>
    <label>Valoración de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Me resulta valioso</fullName>
            </value>
            <value>
                <fullName>No me resulta valioso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>