force-app/main/default/objects/Encuestas_CX__c/fields/Valoraci_n_del_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Valoraci_n_del_Servicio__c</fullName>
    <inlineHelpText>¿Le resulta valioso recibir el servicio a través de una empresa de SND como la nuestra? ¿ O le resulta indistinto?</inlineHelpText>
    <label>Valoración del Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Le resulta valioso</fullName>
            </value>
            <value>
                <fullName>Le resulta indistinto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>