force-app/main/default/objects/Encuestas_CX__c/fields/Visitas_Virtuales_Aspectos_negativos__c.field-meta.xml
<CustomField>
    <fullName>Visitas_Virtuales_Aspectos_negativos__c</fullName>
    <inlineHelpText>¿Qué aspectos negativos encuentra en esta modalidad? (Cuidado completo y personalizado)</inlineHelpText>
    <label>Visitas Virtuales - Aspectos negativos</label>
    <type>TextArea</type>
</CustomField>