force-app/main/default/objects/Encuestas_CX__c/fields/Visitas_Virtuales_Aspectos_positivos__c.field-meta.xml
<CustomField>
    <fullName>Visitas_Virtuales_Aspectos_positivos__c</fullName>
    <inlineHelpText>¿Qué aspectos positivos encuentra en esta modalidad? (Cuidado completo y personalizado)</inlineHelpText>
    <label>Visitas Virtuales - Aspectos positivos</label>
    <type>TextArea</type>
</CustomField>