force-app/main/default/objects/Encuestas_CX__c/fields/X1_Qui_n_responde_la_encuesta__c.field-meta.xml
<CustomField>
    <fullName>X1_Qui_n_responde_la_encuesta__c</fullName>
    <label>¿Quién responde la encuesta?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paciente</fullName>
            </value>
            <value>
                <fullName>Cónyuge</fullName>
            </value>
            <value>
                <fullName>Hijo/a</fullName>
            </value>
            <value>
                <fullName>Cuidador</fullName>
            </value>
            <value>
                <fullName>Personal de la Institución</fullName>
            </value>
            <value>
                <fullName>Otro Familiar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>