force-app/main/default/objects/Encuestas_CX__c/recordTypes/Encuesta_BC.recordType-meta.xml
<RecordType>
    <fullName>Encuesta_BC</fullName>
    <active>true</active>
    <label>Encuesta BC</label>
</RecordType>