force-app/main/default/objects/Encuestas_CX__c/recordTypes/Encuesta_Bomba.recordType-meta.xml
<RecordType>
    <fullName>Encuesta_Bomba</fullName>
    <active>true</active>
    <description>Encuesta de satisfacción de coordinación de bomba</description>
    <label>Encuesta Bomba</label>
</RecordType>