force-app/main/default/objects/Encuestas_CX__c/recordTypes/Encuesta_de_satisfacci_n_transaccional.recordType-meta.xml
<RecordType>
    <fullName>Encuesta_de_satisfacci_n_transaccional</fullName>
    <active>true</active>
    <label>Encuesta de satisfacción transaccional</label>
</RecordType>