force-app/main/default/objects/Encuestas_CX__c/recordTypes/Encuestas_Clientes.recordType-meta.xml
<RecordType>
    <fullName>Encuestas_Clientes</fullName>
    <active>true</active>
    <label>Encuestas Clientes</label>
</RecordType>