force-app/main/default/objects/Encuestas_CX__c/recordTypes/Encuestas_NPS_Best_Care1.recordType-meta.xml
<RecordType>
    <fullName>Encuestas_NPS_Best_Care1</fullName>
    <active>true</active>
    <label>Encuesta BC</label>
</RecordType>