force-app/main/default/objects/Encuestas_CX__c/recordTypes/Seguimiento_de_reclamo.recordType-meta.xml
<RecordType>
    <fullName>Seguimiento_de_reclamo</fullName>
    <active>true</active>
    <label>Seguimiento de reclamo</label>
</RecordType>