force-app/main/default/objects/Encuestas_CX__c/recordTypes/Seguimiento_de_satisfacci_n.recordType-meta.xml
<RecordType>
    <fullName>Seguimiento_de_satisfacci_n</fullName>
    <active>true</active>
    <label>Seguimiento de satisfacción</label>
</RecordType>