force-app/main/default/objects/Encuestas_CX__c/listViews/Seguimiento_de_reclamo_Encuestas_CX.listView-meta.xml
<ListView>
    <fullName>Seguimiento_de_reclamo_Encuestas_CX</fullName>
    <filterScope>Queue</filterScope>
    <label>Cola Consumer</label>
    <queue>Cola_Consumer</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>